使用Messgener的Binder作为Service的Binder

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,9 +1,12 @@
 <resources>
     <string name="app_name">WildDogDemo</string>
-    <string name="app_id">wd7068226413lqkhkx</string>
-    <string name="video_app_id">wd8362968907ehjajp</string>
-    <string name="sync_url">https://wd7068226413lqkhkx.wilddogio.com</string>
-    <string name="video_conversation_room">bird/online</string>
+    <!--<string name="app_id">wd7068226413lqkhkx</string>-->
+    <!--<string name="video_app_id">wd8362968907ehjajp</string>-->
+    <!--<string name="sync_url">https://wd7068226413lqkhkx.wilddogio.com</string>-->
+    <string name="app_id">wd8135265491ssgqrl</string>
+    <string name="video_app_id">wd7446579998mcgsxn</string>
+    <string name="sync_url">https://wd8135265491ssgqrl.wilddogio.com</string>
+    <string name="video_conversation_room">patient</string>
     <string name="title_activity_login">登录</string>
 
     <!-- Strings related to login -->
@@ -23,4 +26,5 @@
     <string name="user_list">用户列表</string>
     <string name="sign_in">登录</string>
     <string name="prompt_phone">电话</string>
+    <string name="doctor_info">刘晓红，消化内科教授、主任医师，医学博士、理学博士，博士导师，老年示范病房主任。1982年毕业于北京医科大学医疗系，1982年毕业于北京医科大学，1990年北京医科大学第三医院消化科获医学博士学位，1995年日本九州大学医学部获医学理学博士学位（Ph.D）。2011年赴美国约翰霍普金斯老年医学科学习3个月。</string>
 </resources>
