修复图片相关问题

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">WildDogDemo</string>
+    <string name="app_name">用户</string>
     <string name="app_id">wd7068226413lqkhkx</string>
     <string name="video_app_id">wd8362968907ehjajp</string>
     <string name="sync_url">https://wd7068226413lqkhkx.wilddogio.com</string>
