--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -50,4 +50,5 @@
     <string name="referee">推荐人</string>
     <string name="register_info">没有账号？请先注册</string>
     <string name="dial">拨号</string>
+    <string name="conversation_history">通话历史</string>
 </resources>
