修改了UI方面的

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -48,7 +48,7 @@
     <string name="password">密码</string>
     <string name="rpassword">重复密码</string>
     <string name="referee">推荐人</string>
-    <string name="register_info">没有账号？请先注册</string>
+    <string name="register_info">没有账号?请先注册</string>
     <string name="dial">拨号</string>
     <string name="conversation_history">通话历史</string>
 </resources>
